<resources>
    <string name="app_name">Event Manager</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Description</string>
    <string name="event_location">Location</string>
    <string name="title_activity_event_form">Event Details</string>
    <string name="title_activity_fill_event_details">Event Details</string>
    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>
    <string name="save">Save</string>
    <string name="view_events">View events</string>
    <string name="or">--- OR ---</string>
    <string name="create_event">Choose new event date</string>
    <string name="title_activity_view_events">All events</string>
    <string name="reminder1">Remind before 1 hr</string>
    <string name="reminder2">Remind before 3 hrs</string>
    <string name="reminder3">Remind before 6 hrs</string>
    <string name="reminders">Reminders</string>
</resources>
