<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".FillEventDetailsActivity"
        tools:showIn="@layout/activity_fill_event_details">



        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical" />-->


        <EditText
            android:id="@+id/eventName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/eventDescription"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/event_description"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <EditText
            android:id="@+id/eventLocation"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/event_location"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/eventDescription" />

        <TimePicker
            android:id="@+id/startTime"
            android:layout_width="220dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

        <TimePicker
            android:id="@+id/endTime"
            android:layout_width="220dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/startTime" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/startTimeText"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="10dp"
            android:text="@string/start_time_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/startTime"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

        <TextView
            android:id="@+id/endTimeText"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="10dp"
            android:text="@string/end_time_text"
            app:layout_constraintEnd_toStartOf="@+id/endTime"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/startTimeText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/reminder3"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/reminder1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reminder1"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/endTime" />

        <Switch
            android:id="@+id/reminder2"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reminder2"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/reminder1" />

        <Switch
            android:id="@+id/reminder3"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reminder3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/reminder2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/reminders"
            app:layout_constraintEnd_toStartOf="@+id/reminder1"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/endTimeText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="391dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="160dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
